<?xml version="1.0" encoding="UTF-8" ?>
<project xmlns="http://maven.apache.org/POM/4.0.0">
    <modelVersion>4.0.0</modelVersion>
    <parent>
        <groupId>net.unit8.kysymys</groupId>
        <artifactId>kysymys-parent</artifactId>
        <version>0.2.0-SNAPSHOT</version>
        <relativePath>../pom.xml</relativePath>
    </parent>
    <artifactId>kysymys-app</artifactId>
    <packaging>jar</packaging>
    <name>kysymys-app</name>
    <description>Kysymys backend (Enkan / Kotowari / Raoh / JOOQ / Bouncr)</description>

    <properties>
        <java.version>25</java.version>
    </properties>

    <build>
        <plugins>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-compiler-plugin</artifactId>
                <configuration>
                    <release>${java.version}</release>
                </configuration>
            </plugin>
            <plugin>
                <groupId>org.codehaus.mojo</groupId>
                <artifactId>exec-maven-plugin</artifactId>
                <version>3.5.0</version>
                <configuration>
                    <mainClass>net.unit8.kysymys.KysymysDevMain</mainClass>
                </configuration>
            </plugin>
        </plugins>
    </build>

    <dependencies>
        <!-- JSON body reader/writer (loaded by SerDesMiddleware via ServiceLoader) -->
        <dependency>
            <groupId>tools.jackson.jakarta.rs</groupId>
            <artifactId>jackson-jakarta-rs-json-provider</artifactId>
            <version>${jackson.version}</version>
        </dependency>

        <!-- Enkan / Kotowari core -->
        <dependency>
            <groupId>net.unit8.enkan</groupId>
            <artifactId>kotowari-restful</artifactId>
            <version>${enkan.version}</version>
        </dependency>
        <dependency>
            <groupId>net.unit8.enkan</groupId>
            <artifactId>kotowari-restful-devel</artifactId>
            <version>${enkan.version}</version>
        </dependency>
        <dependency>
            <groupId>net.unit8.enkan</groupId>
            <artifactId>enkan-devel</artifactId>
            <version>${enkan.version}</version>
        </dependency>

        <!-- Enkan components -->
        <dependency>
            <groupId>net.unit8.enkan</groupId>
            <artifactId>enkan-component-flyway</artifactId>
            <version>${enkan.version}</version>
        </dependency>
        <dependency>
            <groupId>net.unit8.enkan</groupId>
            <artifactId>enkan-component-jackson</artifactId>
            <version>${enkan.version}</version>
        </dependency>
        <dependency>
            <groupId>net.unit8.enkan</groupId>
            <artifactId>enkan-component-HikariCP</artifactId>
            <version>${enkan.version}</version>
        </dependency>
        <dependency>
            <groupId>net.unit8.enkan</groupId>
            <artifactId>enkan-component-undertow</artifactId>
            <version>${enkan.version}</version>
        </dependency>
        <dependency>
            <groupId>net.unit8.enkan</groupId>
            <artifactId>enkan-component-jooq</artifactId>
            <version>${enkan.version}</version>
        </dependency>

        <!-- Bouncr (JWT auth) -->
        <dependency>
            <groupId>net.unit8.enkan</groupId>
            <artifactId>enkan-bouncr</artifactId>
            <version>${enkan.version}</version>
        </dependency>

        <!-- Raoh (validation) -->
        <dependency>
            <groupId>net.unit8.raoh</groupId>
            <artifactId>raoh-json</artifactId>
            <version>${raoh.version}</version>
        </dependency>
        <dependency>
            <groupId>net.unit8.raoh</groupId>
            <artifactId>raoh-jooq</artifactId>
            <version>${raoh.version}</version>
        </dependency>

        <!-- Bean Validation (required by kotowari-restful BeansValidator) -->
        <dependency>
            <groupId>jakarta.validation</groupId>
            <artifactId>jakarta.validation-api</artifactId>
            <version>3.1.1</version>
        </dependency>
        <dependency>
            <groupId>org.hibernate.validator</groupId>
            <artifactId>hibernate-validator</artifactId>
            <version>9.0.1.Final</version>
            <scope>runtime</scope>
        </dependency>
        <dependency>
            <groupId>org.glassfish.expressly</groupId>
            <artifactId>expressly</artifactId>
            <version>6.0.0</version>
            <scope>runtime</scope>
        </dependency>

        <!-- ID generation -->
        <dependency>
            <groupId>com.aventrix.jnanoid</groupId>
            <artifactId>jnanoid</artifactId>
        </dependency>

        <!-- 8-bit avatar generator (PNG) -->
        <dependency>
            <groupId>com.talanlabs</groupId>
            <artifactId>avatar-generator-8bit</artifactId>
            <version>1.1.0</version>
        </dependency>

        <!-- DB drivers -->
        <dependency>
            <groupId>com.h2database</groupId>
            <artifactId>h2</artifactId>
            <version>2.4.240</version>
            <scope>runtime</scope>
        </dependency>
        <dependency>
            <groupId>org.postgresql</groupId>
            <artifactId>postgresql</artifactId>
            <version>42.7.3</version>
            <scope>runtime</scope>
        </dependency>

        <!-- Flyway PostgreSQL provider (Flyway 10+ split DB types into separate artifacts) -->
        <dependency>
            <groupId>org.flywaydb</groupId>
            <artifactId>flyway-database-postgresql</artifactId>
            <version>11.20.3</version>
            <scope>runtime</scope>
        </dependency>

        <!-- Logging -->
        <dependency>
            <groupId>org.slf4j</groupId>
            <artifactId>slf4j-simple</artifactId>
            <version>2.0.17</version>
            <scope>runtime</scope>
        </dependency>

        <!-- Test -->
        <dependency>
            <groupId>org.junit.jupiter</groupId>
            <artifactId>junit-jupiter</artifactId>
            <scope>test</scope>
        </dependency>
        <dependency>
            <groupId>org.assertj</groupId>
            <artifactId>assertj-core</artifactId>
            <scope>test</scope>
        </dependency>
    </dependencies>
</project>
